[project]
name = "arabic-seed-processing"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.5.8",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pycountry>=26.2.16",
    "seaborn>=0.13.2",
    "tldextract>=5.3.1",
]
